# gamepad-values

./: LICENSE  README.md
gamepad-values/: CMakeLists.txt  CMakePresets.json  build.sh
gamepad-values/docs/: maths.ods
gamepad-values/include/: gamepad.h
gamepad-values/src/: gamepad.cpp  main.cpp
